Replace Set.of() with Collections.emptySet() for improved clarity in provideData method